codigo redundante e taylor green, DFG-2 comparacion

--- a/unit_square/ipcs.ipynb
+++ b/unit_square/ipcs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b65e9de2-2108-473d-baf6-d8685653b9d5",
+   "metadata": {},
+   "source": [
+    "# Poisellieu flow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5305a145-22cd-4243-8d8a-a782af7166e7",
@@ -152,27 +160,13 @@
    "execution_count": 7,
    "id": "c99643df-be66-4459-8384-8d4dfff74b67",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     21\u001b[0m problem1 \u001b[38;5;241m=\u001b[39m LinearProblem(bilinear1, linear1, bc_u, u_sol)\n\u001b[0;32m---> 22\u001b[0m \u001b[43mproblem1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m problem2 \u001b[38;5;241m=\u001b[39m LinearProblem(bilinear2, linear2, bc_p, p_sol)\n\u001b[1;32m     25\u001b[0m problem2\u001b[38;5;241m.\u001b[39msolve()\n",
-      "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.12/dist-packages/dolfinx/fem/petsc.py:856\u001b[0m, in \u001b[0;36mLinearProblem.solve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    853\u001b[0m     bc\u001b[38;5;241m.\u001b[39mset(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_b\u001b[38;5;241m.\u001b[39marray_w)\n\u001b[1;32m    855\u001b[0m \u001b[38;5;66;03m# Solve linear system and update ghost values in the solution\u001b[39;00m\n\u001b[0;32m--> 856\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_solver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_b\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_x\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    857\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu\u001b[38;5;241m.\u001b[39mx\u001b[38;5;241m.\u001b[39mscatter_forward()\n\u001b[1;32m    859\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dolfinx.fem.petsc import LinearProblem\n",
     "from dolfinx.fem import assemble_scalar\n",
     "from datetime import date\n",
     "\n",
     "t = 0\n",
-    "i = 0\n",
     "u_file = io.VTXWriter(domain.comm, f\"{date.today()}/velocity.bp\", u_sol)\n",
     "p_file = io.VTXWriter(domain.comm, f\"{date.today()}/pressure.bp\", p_sol)\n",
     "u_file.write(t)\n",
@@ -185,7 +179,6 @@
     "with open(f\"{date.today()}/error.txt\", \"w\") as error_log:\n",
     "    for n in range(num_steps):\n",
     "        t += dt.value\n",
-    "        i += 1\n",
     "        \n",
     "        problem1 = LinearProblem(bilinear1, linear1, bc_u, u_sol)\n",
     "        problem1.solve()\n",
@@ -202,19 +195,18 @@
     "        u_prev.x.array[:] = u_sol.x.array\n",
     "        p_prev.x.array[:] = p_sol.x.array\n",
     "        \n",
-    "        if i % 10 == 0:\n",
-    "            # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
-    "            # con norma L_inf\n",
-    "            #error = np.abs(u_e.x.array - u_sol.x.array).max()/np.abs(u_e.x.array).max()\n",
-    "    \n",
-    "            # con norma L_2\n",
-    "            error_abs_integral = fem.form(inner(u_e - u_sol, u_e - u_sol) * dx)\n",
-    "            error_abs = np.sqrt(comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
-    "            norm_u_e_integral = fem.form(inner(u_e, u_e) * dx)\n",
-    "            norm_u_e = np.sqrt(comm.allreduce(assemble_scalar(norm_u_e_integral), op=MPI.SUM))\n",
-    "            error = error_abs / norm_u_e\n",
-    "            \n",
-    "            error_log.write('t = %.2f: error = %.3g' % (t, error) + \"\\n\")\n",
+    "        # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
+    "        # con norma L_inf\n",
+    "        #error = np.abs(u_e.x.array - u_sol.x.array).max()/np.abs(u_e.x.array).max()\n",
+    "\n",
+    "        # con norma L_2\n",
+    "        error_abs_integral = fem.form(inner(u_e - u_sol, u_e - u_sol) * dx)\n",
+    "        error_abs = np.sqrt(comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
+    "        norm_u_e_integral = fem.form(inner(u_e, u_e) * dx)\n",
+    "        norm_u_e = np.sqrt(comm.allreduce(assemble_scalar(norm_u_e_integral), op=MPI.SUM))\n",
+    "        error = error_abs / norm_u_e\n",
+    "        \n",
+    "        error_log.write('t = %.2f: error = %.3g' % (t, error) + \"\\n\")\n",
     "\n",
     "u_file.close()\n",
     "p_file.close()"
