--- a/volume_taylor_green/ipcs.ipynb
+++ b/volume_taylor_green/ipcs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1d26f4f3-2d68-46fa-a6d9-d52cfcc22527",
+   "metadata": {},
+   "source": [
+    "# Benchmark Taylor green"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5305a145-22cd-4243-8d8a-a782af7166e7",
@@ -154,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c99643df-be66-4459-8384-8d4dfff74b67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dcaa30017ef4c5987527d1ae914fc84",
+       "model_id": "9e44da5ca7304bc4baaa9235efae26c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,7 +186,6 @@
     "from dolfinx.fem import assemble_scalar\n",
     "from tqdm.notebook import tqdm\n",
     "from datetime import date\n",
-    "\n",
     "\n",
     "t = 0\n",
     "i = 0\n",
@@ -198,8 +205,8 @@
     "    \n",
     "        u_bc.interpolate(lambda x: u_analytic(*x, t))\n",
     "        p_bc.interpolate(lambda x: p_analytic(*x, t))\n",
-    "        bc_u  = fem.dirichletbc(u_bc, dofs_boundary_u)\n",
-    "        bc_p  = fem.dirichletbc(p_bc, dofs_boundary_p)\n",
+    "        #bc_u  = fem.dirichletbc(u_bc, dofs_boundary_u) no es necesario\n",
+    "        #bc_p  = fem.dirichletbc(p_bc, dofs_boundary_p)\n",
     "        \n",
     "        problem1 = LinearProblem(bilinear1, linear1, [bc_u], u_sol)\n",
     "        problem1.solve()\n",
@@ -216,21 +223,18 @@
     "        u_prev.x.array[:] = u_sol.x.array\n",
     "        p_prev.x.array[:] = p_sol.x.array\n",
     "    \n",
-    "        if i % 3 == 0:\n",
-    "            # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
-    "            u_sol_analytic.interpolate(lambda x: u_analytic(*x, t))\n",
-    "            \n",
-    "            # con norma L_inf\n",
-    "            #error = np.abs(u_sol_analytic.x.array - u_sol.x.array).max()/np.abs(u_sol_analytic.x.array).max()\n",
-    "    \n",
-    "            # con norma L_2\n",
-    "            error_abs_integral = fem.form(inner(u_sol_analytic - u_sol, u_sol_analytic - u_sol) * dx)\n",
-    "            error_abs = np.sqrt(comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
-    "            norm_u_analytic_integral = fem.form(inner(u_sol_analytic, u_sol_analytic) * dx)\n",
-    "            norm_u_analytic = np.sqrt(comm.allreduce(assemble_scalar(norm_u_analytic_integral), op=MPI.SUM))\n",
-    "            error = error_abs / norm_u_analytic\n",
-    "            \n",
-    "            error_log.write('t = %.2f: error = %.3g' % (t, error) + \"\\n\")\n",
+    "        # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
+    "        u_sol_analytic.interpolate(lambda x: u_analytic(*x, t))\n",
+    "        \n",
+    "        # con norma L_inf\n",
+    "        #error = np.abs(u_sol_analytic.x.array - u_sol.x.array).max()/np.abs(u_sol_analytic.x.array).max()\n",
+    "        # con norma L_2\n",
+    "        error_abs_integral = fem.form(inner(u_sol_analytic - u_sol, u_sol_analytic - u_sol) * dx)\n",
+    "        error_abs = np.sqrt(comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
+    "        norm_u_analytic_integral = fem.form(inner(u_sol_analytic, u_sol_analytic) * dx)\n",
+    "        norm_u_analytic = np.sqrt(comm.allreduce(assemble_scalar(norm_u_analytic_integral), op=MPI.SUM))\n",
+    "        error = error_abs / norm_u_analytic\n",
+    "        error_log.write('t = %.3f: error = %.3g' % (t, error) + \"\\n\")\n",
     "\n",
     "progress.close()\n",
     "u_file.close()\n",
