DFG-2 benchmark protocolo

--- a/unit_square/ipcs.ipynb
+++ b/unit_square/ipcs.ipynb
@@ -160,24 +160,43 @@
    "execution_count": 7,
    "id": "c99643df-be66-4459-8384-8d4dfff74b67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa96a84db5b54e158fdcebd5fa129c98",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resolviendo navier-stokes:   0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from dolfinx.fem.petsc import LinearProblem\n",
     "from dolfinx.fem import assemble_scalar\n",
-    "from datetime import date\n",
+    "from datetime import datetime, timezone, timedelta\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "t = 0\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{date.today()}/velocity.bp\", u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{date.today()}/pressure.bp\", p_sol)\n",
+    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds')\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{folder}/velocity.bp\", u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{folder}/pressure.bp\", p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)\n",
+    "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps)\n",
     "\n",
     "u_e = fem.Function(velocity_function_space)\n",
     "u_e.interpolate(lambda x: np.vstack((4.0*x[1]*(1.0 - x[1]), 0.0*x[0])))\n",
     "comm = u_sol.function_space.mesh.comm\n",
     "\n",
-    "with open(f\"{date.today()}/error.txt\", \"w\") as error_log:\n",
+    "with open(f\"{folder}/error.txt\", \"w\") as error_log:\n",
     "    for n in range(num_steps):\n",
+    "        progress.update()\n",
     "        t += dt.value\n",
     "        \n",
     "        problem1 = LinearProblem(bilinear1, linear1, bc_u, u_sol)\n",
