--- a/volume_lid_driven/ipcs.ipynb
+++ b/volume_lid_driven/ipcs.ipynb
@@ -182,8 +182,9 @@
     "from datetime import date\n",
     "\n",
     "t = 0\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{date.today()}/velocity.bp\", u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{date.today()}/pressure.bp\", p_sol)\n",
+    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds')\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{folder}/velocity.bp\", u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{folder}/pressure.bp\", p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)\n",
     "\n",
