--- a/pipe_with_cylinder/ipcs.ipynb
+++ b/pipe_with_cylinder/ipcs.ipynb
@@ -375,6 +375,7 @@
     "# inlet\n",
     "u_inlet = Function(velocity_space)\n",
     "u_inlet.interpolate(inlet_velocity)\n",
+    "# EVALUA U_INLET EN (0,0.5) PARA VER SI SI ESTA INTERPOLANDO BIEN\n",
     "bcu_inflow = dirichletbc(u_inlet, locate_dofs_topological(velocity_space, fdim, ft.find(inlet_marker)))\n",
     "# walls\n",
     "u_nonslip = np.array((0,) * domain.geometry.dim, dtype=PETSc.ScalarType)\n",
