lid driven 2D benchmark

--- a/volume_taylor_green/ipcs.ipynb
+++ b/volume_taylor_green/ipcs.ipynb
@@ -15,42 +15,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://jsdokken.com/dolfinx-tutorial/chapter2/navierstokes.html#variational-formulation\n",
-    "\n",
     "from dolfinx import mesh, fem, io\n",
-    "import ufl\n",
     "from mpi4py import MPI\n",
     "from petsc4py import PETSc\n",
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "974b000f-7bdb-4085-ac52-e0f819f1fb07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "T = 0.1\n",
     "num_steps = 100\n",
-    "n_cells = 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "665e992d-dc32-46e8-8620-869a06d7d48f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "n_cells = 32\n",
     "domain = mesh.create_unit_cube(MPI.COMM_WORLD, n_cells, n_cells, n_cells) \n",
-    "velocity_function_space = fem.functionspace(domain, (\"Lagrange\", 2, (3,))) \n",
-    "pressure_function_space = fem.functionspace(domain, (\"Lagrange\", 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bc2a607e-af5d-4090-8156-a438f344a040",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = fem.Constant(domain, PETSc.ScalarType((0,0,0)))\n",
-    "dt = fem.Constant(domain, T/num_steps)\n",
-    "mu = fem.Constant(domain, PETSc.ScalarType(1/50)) # Re = 50\n",
-    "rho = fem.Constant(domain, PETSc.ScalarType(1))"
+    "\n",
+    "f = (0,0,0)\n",
+    "dt = T/num_steps\n",
+    "mu = 1/50 # Re = 50\n",
+    "rho = 1"
    ]
   },
   {
@@ -86,20 +72,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = ufl.TrialFunction(velocity_function_space)\n",
-    "p = ufl.TrialFunction(pressure_function_space)\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
+    "from solver1 import SolverIPCS\n",
     "\n",
-    "v = ufl.TestFunction(velocity_function_space)\n",
-    "q = ufl.TestFunction(pressure_function_space)\n",
+    "solver = SolverIPCS(domain, dt, rho, mu, f, lambda x: u_analytic(*x, 0))\n",
     "\n",
-    "u_sol = fem.Function(velocity_function_space) # guarda la solucion del tiempo actual\n",
-    "u_prev = fem.Function(velocity_function_space) # guarda la solucion del tiempo anterior\n",
-    "p_sol = fem.Function(pressure_function_space) \n",
-    "p_prev = fem.Function(pressure_function_space)\n",
-    "\n",
-    "# interpolar la condicion inicial\n",
-    "u_prev.interpolate(lambda x: u_analytic(*x, 0))\n",
-    "p_prev.interpolate(lambda x: p_analytic(*x, 0))"
+    "# puede no ser necesario\n",
+    "#p_prev.interpolate(lambda x: p_analytic(*x, 0))"
    ]
   },
   {
@@ -112,54 +93,23 @@
     "# Dirichlet BC en todas las fronteras, dada por la solución analítica\n",
     "domain.topology.create_connectivity(domain.topology.dim-1, domain.topology.dim)\n",
     "boundary_facets = mesh.exterior_facet_indices(domain.topology) # acá hay un tema con los procesos y es que devuelve los indices locales (del proceso)\n",
-    "dofs_boundary_u = fem.locate_dofs_topological(velocity_function_space, domain.topology.dim-1, boundary_facets)\n",
-    "dofs_boundary_p = fem.locate_dofs_topological(pressure_function_space, domain.topology.dim-1, boundary_facets)\n",
+    "dofs_boundary_u = fem.locate_dofs_topological(solver.velocity_space, domain.topology.dim-1, boundary_facets)\n",
+    "dofs_boundary_p = fem.locate_dofs_topological(solver.pressure_space, domain.topology.dim-1, boundary_facets)\n",
     "\n",
-    "u_bc = fem.Function(velocity_function_space)\n",
-    "p_bc = fem.Function(pressure_function_space)\n",
-    "bc_u  = fem.dirichletbc(u_bc, dofs_boundary_u)\n",
-    "bc_p  = fem.dirichletbc(p_bc, dofs_boundary_p)"
+    "u_bc = fem.Function(solver.velocity_space)\n",
+    "p_bc = fem.Function(solver.pressure_space)\n",
+    "bcu  = [fem.dirichletbc(u_bc, dofs_boundary_u)]\n",
+    "bcp  = [fem.dirichletbc(p_bc, dofs_boundary_p)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "07068291-e306-406d-b5cd-0b4c44b8eab9",
+   "execution_count": null,
+   "id": "2b68d1e0-3915-4e80-863c-b0c5e64e8e52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ufl import FacetNormal, dx, ds, dot, inner, sym, nabla_grad, Identity, lhs, rhs, div\n",
-    "\n",
-    "u_midpoint = 0.5*(u_prev + u)\n",
-    "n = FacetNormal(domain)\n",
-    "\n",
-    "def epsilon(u):\n",
-    "    return sym(nabla_grad(u))\n",
-    "\n",
-    "def sigma(u, p):\n",
-    "    return 2*mu*epsilon(u) - p*Identity(len(u))\n",
-    "\n",
-    "# step 1\n",
-    "form1 = rho*dot((u - u_prev) / dt, v)*dx \\\n",
-    "      + rho*dot(dot(u_prev, nabla_grad(u_prev)), v)*dx \\\n",
-    "      + inner(sigma(u_midpoint, p_prev), epsilon(v))*dx \\\n",
-    "      + dot(p_prev*n, v)*ds - dot(mu*nabla_grad(u_midpoint)*n, v)*ds \\\n",
-    "      - dot(f, v)*dx\n",
-    "bilinear1 = lhs(form1)\n",
-    "linear1 = rhs(form1)\n",
-    "\n",
-    "# step 2\n",
-    "form2 = dot(nabla_grad(p), nabla_grad(q))*dx \\\n",
-    "      - dot(nabla_grad(p_prev), nabla_grad(q))*dx \\\n",
-    "      + (rho/dt)*div(u_sol)*q*dx\n",
-    "bilinear2 = lhs(form2)\n",
-    "linear2 = rhs(form2)\n",
-    "\n",
-    "# step 3\n",
-    "form3 = rho*dot((u - u_sol), v)*dx \\\n",
-    "      + dt*dot(nabla_grad(p_sol - p_prev), v)*dx\n",
-    "bilinear3 = lhs(form3)\n",
-    "linear3 = rhs(form3)"
+    "solver.assembleTimeIndependent(bcu, bcp)"
    ]
   },
   {
@@ -169,6 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !! para debugear y checkear valores de la funcion en un punto\n",
     "from dolfinx.geometry import bb_tree, compute_collisions_points, compute_colliding_cells\n",
     "\n",
     "tree = bb_tree(domain, domain.geometry.dim)\n",
@@ -179,6 +130,27 @@
     "cells.append(colliding_cells.links(0)[0])\n",
     "cells.append(colliding_cells.links(1)[0])\n",
     "cells.append(colliding_cells.links(2)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f71728cf-ca7a-410a-82e9-68300ea688e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tqdm():\n",
+    "    try:\n",
+    "        # Check if inside Jupyter notebook\n",
+    "        from IPython import get_ipython\n",
+    "        shell = get_ipython().__class__.__name__\n",
+    "        if shell in [\"ZMQInteractiveShell\"]:\n",
+    "            from tqdm.notebook import tqdm as notebook_tqdm\n",
+    "            return notebook_tqdm\n",
+    "    except:\n",
+    "        pass\n",
+    "    from tqdm import tqdm  # fallback for scripts\n",
+    "    return tqdm"
    ]
   },
   {
@@ -1809,72 +1781,65 @@
     }
    ],
    "source": [
-    "from dolfinx.fem.petsc import LinearProblem\n",
+    "tqdm = get_tqdm()\n",
     "from dolfinx.fem import assemble_scalar\n",
-    "from tqdm.notebook import tqdm\n",
-    "from datetime import date\n",
+    "from datetime import datetime, timezone, timedelta\n",
     "from dolfinx.geometry import bb_tree, compute_collisions_points, compute_colliding_cells\n",
     "\n",
     "t = 0\n",
     "i = 0\n",
-    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds')\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{folder}/velocity.bp\", u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{folder}/pressure.bp\", p_sol)\n",
+    "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps) if domain.comm.rank == 0 else None\n",
+    "error_log = open(f\"{folder}/error.txt\", \"w\") if domain.comm.rank == 0 else None\n",
+    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
+    "folder = domain.comm.bcast(folder, root=0)\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{folder}/velocity.bp\", solver.u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{folder}/pressure.bp\", solver.p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)\n",
     "\n",
-    "comm = u_sol.function_space.mesh.comm\n",
-    "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps)\n",
-    "\n",
-    "with open(f\"{date.today()}/error.txt\", \"w\") as error_log:\n",
-    "    for n in range(num_steps):\n",
+    "for n in range(num_steps):\n",
+    "    if progress:\n",
     "        progress.update()\n",
-    "        t += dt.value\n",
-    "        i += 1\n",
-    "    \n",
-    "        u_bc.interpolate(lambda x: u_analytic(*x, t))\n",
-    "        p_bc.interpolate(lambda x: p_analytic(*x, t))\n",
     "        \n",
-    "        problem1 = LinearProblem(bilinear1, linear1, [bc_u], u_sol)\n",
-    "        problem1.solve()\n",
-    "    \n",
-    "        problem2 = LinearProblem(bilinear2, linear2, [bc_p], p_sol)\n",
-    "        problem2.solve()\n",
-    "    \n",
-    "        problem3 = LinearProblem(bilinear3, linear3, [bc_u], u_sol)\n",
-    "        problem3.solve()\n",
-    "    \n",
-    "        u_file.write(t)\n",
-    "        p_file.write(t)\n",
+    "    t += dt.value\n",
+    "    i += 1\n",
     "\n",
-    "        u_prev.x.array[:] = u_sol.x.array\n",
-    "        p_prev.x.array[:] = p_sol.x.array\n",
+    "    u_bc.interpolate(lambda x: u_analytic(*x, t))\n",
+    "    p_bc.interpolate(lambda x: p_analytic(*x, t))\n",
     "    \n",
-    "        # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
-    "        u_sol_analytic.interpolate(lambda x: u_analytic(*x, t))\n",
+    "    solver.solveStep(bc_u, bc_p)\n",
+    "    \n",
+    "    u_file.write(t)\n",
+    "    p_file.write(t)\n",
     "\n",
-    "        #if t == 0.000:\n",
-    "        print(\"t=\",t)\n",
-    "        for (j, point) in enumerate(points):\n",
-    "            print(\"aprox\", u_sol.eval(point, cells[j]))\n",
-    "            print(\"aprox2\", u_prev.eval(point, cells[j]))\n",
-    "            print(\"inter\", u_sol_analytic.eval(point, cells[j]))\n",
-    "            print(\"exact\", u_analytic(*point,t).flatten())\n",
-    "            print(\"error\", np.sum(u_sol.eval(point, cells[j]) -u_analytic(*point,t).flatten()))\n",
-    "        \n",
-    "        # con norma L_inf\n",
-    "        #error = np.abs(u_sol_analytic.x.array - u_sol.x.array).max()/np.abs(u_sol_analytic.x.array).max()\n",
-    "        # con norma L_2\n",
-    "        error_abs_integral = fem.form(inner(u_sol_analytic - u_sol, u_sol_analytic - u_sol) * dx)\n",
-    "        error_abs = np.sqrt(comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
-    "        norm_u_analytic_integral = fem.form(inner(u_sol_analytic, u_sol_analytic) * dx)\n",
-    "        norm_u_analytic = np.sqrt(comm.allreduce(assemble_scalar(norm_u_analytic_integral), op=MPI.SUM))\n",
-    "        error = error_abs / norm_u_analytic\n",
+    "    # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
+    "    u_sol_analytic.interpolate(lambda x: u_analytic(*x, t))\n",
+    "\n",
+    "    # !! DEBUG\n",
+    "    #print(\"t=\",t)\n",
+    "    #for (j, point) in enumerate(points):\n",
+    "    #    print(\"aprox\", u_sol.eval(point, cells[j]))\n",
+    "    #    print(\"aprox2\", u_prev.eval(point, cells[j]))\n",
+    "    #    print(\"inter\", u_sol_analytic.eval(point, cells[j]))\n",
+    "    #    print(\"exact\", u_analytic(*point,t).flatten())\n",
+    "    #    print(\"error\", np.sum(u_sol.eval(point, cells[j]) -u_analytic(*point,t).flatten()))\n",
+    "    # !! DEBUG\n",
+    "    \n",
+    "    error_abs_integral = fem.form(inner(u_sol_analytic - u_sol, u_sol_analytic - u_sol) * dx)\n",
+    "    error_abs = np.sqrt(comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
+    "    norm_u_analytic_integral = fem.form(inner(u_sol_analytic, u_sol_analytic) * dx)\n",
+    "    norm_u_analytic = np.sqrt(comm.allreduce(assemble_scalar(norm_u_analytic_integral), op=MPI.SUM))\n",
+    "    error = error_abs / norm_u_analytic\n",
+    "\n",
+    "    if error_log:\n",
     "        error_log.write('t = %.3f: error = %.3g' % (t, error) + \"\\n\")\n",
     "\n",
-    "progress.close()\n",
     "u_file.close()\n",
-    "p_file.close()"
+    "p_file.close()\n",
+    "if progress:\n",
+    "    progress.close()\n",
+    "if error_log:\n",
+    "    error_log.close()"
    ]
   },
   {
