--- a/unit_square/ipcs.ipynb
+++ b/unit_square/ipcs.ipynb
@@ -15,71 +15,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://jsdokken.com/dolfinx-tutorial/chapter2/navierstokes.html#variational-formulation\n",
-    "\n",
     "from dolfinx import mesh, fem, io\n",
     "import ufl\n",
     "from mpi4py import MPI\n",
     "from petsc4py import PETSc\n",
-    "import numpy as np\n",
-    "\n",
-    "T = 5\n",
-    "num_steps = 1000\n",
-    "n_cells = 32"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "665e992d-dc32-46e8-8620-869a06d7d48f",
+   "id": "1e59822a-35ec-4144-ace4-9fd8373bbae8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "T = 5\n",
+    "num_steps = 1000\n",
+    "n_cells = 32\n",
     "domain = mesh.create_unit_square(MPI.COMM_WORLD, n_cells, n_cells)\n",
-    "velocity_function_space = fem.functionspace(domain, (\"Lagrange\", 2, (2,))) \n",
-    "pressure_function_space = fem.functionspace(domain, (\"Lagrange\", 1))"
+    "\n",
+    "f = (0, 0)\n",
+    "dt = T/num_steps\n",
+    "mu = 1\n",
+    "rho = 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bc2a607e-af5d-4090-8156-a438f344a040",
+   "id": "03313700-081e-4fb4-a39d-f11c5f08c24a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = fem.Constant(domain, PETSc.ScalarType((0,0)))\n",
-    "dt = fem.Constant(domain, T/num_steps)\n",
-    "mu = fem.Constant(domain, PETSc.ScalarType(1))\n",
-    "rho = fem.Constant(domain, PETSc.ScalarType(1))"
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
+    "from solver1 import SolverIPCS\n",
+    "\n",
+    "def initial_velocity(x):\n",
+    "    values = np.zeros((domain.geometry.dim, x.shape[1]), dtype=PETSc.ScalarType)\n",
+    "    values[1] = 10\n",
+    "    return values\n",
+    "\n",
+    "solver = SolverIPCS(domain, dt, rho, mu, f, initial_velocity)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14e131e7-b38f-490f-b262-e0f80135ea32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u = ufl.TrialFunction(velocity_function_space)\n",
-    "p = ufl.TrialFunction(pressure_function_space)\n",
-    "\n",
-    "v = ufl.TestFunction(velocity_function_space)\n",
-    "q = ufl.TestFunction(pressure_function_space)\n",
-    "\n",
-    "u_sol = fem.Function(velocity_function_space) # function to store u solved\n",
-    "u_prev = fem.Function(velocity_function_space) # u from previous time step\n",
-    "p_sol = fem.Function(pressure_function_space) \n",
-    "p_prev = fem.Function(pressure_function_space)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "f805378e-fb08-4131-b56f-2fd653e9f7b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# poisellieu flow\n",
+    "# bounda\n",
     "def inflow(x):\n",
     "    return np.isclose(x[0], 0)\n",
     "\n",
@@ -93,78 +81,61 @@
     "\n",
     "fdim = domain.topology.dim - 1\n",
     "inflow_facets = mesh.locate_entities_boundary(domain, fdim, inflow)\n",
-    "dofs_inflow = fem.locate_dofs_topological(pressure_function_space, fdim, inflow_facets)\n",
-    "bc_inflow  = fem.dirichletbc(fem.Constant(domain, PETSc.ScalarType(8)), dofs_inflow, pressure_function_space)\n",
+    "dofs_inflow = fem.locate_dofs_topological(solver.pressure_space, fdim, inflow_facets)\n",
+    "bc_inflow  = fem.dirichletbc(fem.Constant(domain, PETSc.ScalarType(8)), dofs_inflow, solver.pressure_space)\n",
     "\n",
     "outflow_facets = mesh.locate_entities_boundary(domain, fdim, outflow)\n",
-    "dofs_outflow = fem.locate_dofs_topological(pressure_function_space, fdim, outflow_facets)\n",
-    "bc_outflow  = fem.dirichletbc(fem.Constant(domain, PETSc.ScalarType(0)), dofs_outflow, pressure_function_space)\n",
+    "dofs_outflow = fem.locate_dofs_topological(solver.pressure_space, fdim, outflow_facets)\n",
+    "bc_outflow  = fem.dirichletbc(fem.Constant(domain, PETSc.ScalarType(0)), dofs_outflow, solver.pressure_space)\n",
     "bc_p = [bc_inflow, bc_outflow]\n",
     "\n",
     "walls_facets = mesh.locate_entities_boundary(domain, fdim, walls)\n",
-    "dofs_walls = fem.locate_dofs_topological(velocity_function_space, fdim, walls_facets)\n",
-    "bc_noslip  = fem.dirichletbc(fem.Constant(domain, PETSc.ScalarType((0, 0))), dofs_walls, velocity_function_space)\n",
+    "dofs_walls = fem.locate_dofs_topological(solver.velocity_space, fdim, walls_facets)\n",
+    "bc_noslip  = fem.dirichletbc(fem.Constant(domain, PETSc.ScalarType((0, 0))), dofs_walls, solver.velocity_space)\n",
     "bc_u = [bc_noslip]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "07068291-e306-406d-b5cd-0b4c44b8eab9",
+   "execution_count": 5,
+   "id": "5d96078a-f98c-4cb8-9759-ee1b6f005a75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ufl import FacetNormal, dx, ds, dot, inner, sym, nabla_grad, Identity, lhs, rhs, div\n",
-    "\n",
-    "u_midpoint = 0.5*(u_prev + u)\n",
-    "n = FacetNormal(domain)\n",
-    "\n",
-    "def epsilon(u):\n",
-    "    return sym(nabla_grad(u))\n",
-    "\n",
-    "def sigma(u, p):\n",
-    "    return 2*mu*epsilon(u) - p*Identity(len(u))\n",
-    "\n",
-    "# step 1\n",
-    "form1 = rho*dot((u - u_prev) / dt, v)*dx \\\n",
-    "      + rho*dot(dot(u_prev, nabla_grad(u_prev)), v)*dx \\\n",
-    "      + inner(sigma(u_midpoint, p_prev), epsilon(v))*dx \\\n",
-    "      + dot(p_prev*n, v)*ds - dot(mu*nabla_grad(u_midpoint)*n, v)*ds \\\n",
-    "      - dot(f, v)*dx\n",
-    "bilinear1 = lhs(form1)\n",
-    "linear1 = rhs(form1)\n",
-    "\n",
-    "# bilinear1 is not time dependent, it can be assembled only once\n",
-    "#A1 = fem.assemble_matrix(fem.form(bilinear1), bcs=bc_u)\n",
-    "#A1.assemble()\n",
-    "\n",
-    "#linear1 is time dependent\n",
-    "#b1 = create_vector(linear1) # \n",
-    "\n",
-    "# step 2\n",
-    "form2 = dot(nabla_grad(p), nabla_grad(q))*dx \\\n",
-    "      - dot(nabla_grad(p_prev), nabla_grad(q))*dx \\\n",
-    "      + (rho/dt)*div(u_sol)*q*dx\n",
-    "bilinear2 = lhs(form2)\n",
-    "linear2 = rhs(form2)\n",
-    "\n",
-    "# step 3\n",
-    "form3 = rho*dot((u - u_sol), v)*dx \\\n",
-    "      + dt*dot(nabla_grad(p_sol - p_prev), v)*dx\n",
-    "bilinear3 = lhs(form3)\n",
-    "linear3 = rhs(form3)"
+    "solver.assembleTimeIndependent(bc_u, bc_p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "5797193a-5b44-4caf-95cd-ffd9251b9aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tqdm():\n",
+    "    try:\n",
+    "        # Check if inside Jupyter notebook\n",
+    "        from IPython import get_ipython\n",
+    "        shell = get_ipython().__class__.__name__\n",
+    "        if shell in [\"ZMQInteractiveShell\"]:\n",
+    "            from tqdm.notebook import tqdm as notebook_tqdm\n",
+    "            return notebook_tqdm\n",
+    "    except:\n",
+    "        pass\n",
+    "    from tqdm import tqdm  # fallback for scripts\n",
+    "    return tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c99643df-be66-4459-8384-8d4dfff74b67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa96a84db5b54e158fdcebd5fa129c98",
+       "model_id": "e2ca812c0ff84491a79d97255b19ea15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,59 +148,57 @@
     }
    ],
    "source": [
-    "from dolfinx.fem.petsc import LinearProblem\n",
     "from dolfinx.fem import assemble_scalar\n",
+    "from ufl import inner, dx\n",
     "from datetime import datetime, timezone, timedelta\n",
-    "from tqdm.notebook import tqdm\n",
+    "tqdm = get_tqdm()\n",
     "\n",
     "t = 0\n",
-    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds')\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{folder}/velocity.bp\", u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{folder}/pressure.bp\", p_sol)\n",
+    "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps) if domain.comm.rank == 0 else None\n",
+    "error_log = open(f\"{folder}/error.txt\", \"w\") if domain.comm.rank == 0 else None\n",
+    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
+    "folder = domain.comm.bcast(folder, root=0)\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{folder}/velocity.bp\", solver.u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{folder}/pressure.bp\", solver.p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)\n",
-    "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps)\n",
     "\n",
-    "u_e = fem.Function(velocity_function_space)\n",
+    "u_e = fem.Function(solver.velocity_space)\n",
     "u_e.interpolate(lambda x: np.vstack((4.0*x[1]*(1.0 - x[1]), 0.0*x[0])))\n",
-    "comm = u_sol.function_space.mesh.comm\n",
     "\n",
-    "with open(f\"{folder}/error.txt\", \"w\") as error_log:\n",
-    "    for n in range(num_steps):\n",
+    "for i in range(num_steps):\n",
+    "    if progress:\n",
     "        progress.update()\n",
-    "        t += dt.value\n",
     "        \n",
-    "        problem1 = LinearProblem(bilinear1, linear1, bc_u, u_sol)\n",
-    "        problem1.solve()\n",
-    "    \n",
-    "        problem2 = LinearProblem(bilinear2, linear2, bc_p, p_sol)\n",
-    "        problem2.solve()\n",
-    "    \n",
-    "        problem3 = LinearProblem(bilinear3, linear3, bc_u, u_sol)\n",
-    "        problem3.solve()\n",
-    "    \n",
-    "        u_file.write(t)\n",
-    "        p_file.write(t)\n",
-    "        \n",
-    "        u_prev.x.array[:] = u_sol.x.array\n",
-    "        p_prev.x.array[:] = p_sol.x.array\n",
-    "        \n",
-    "        # error relativo: |u_sol - u_analitica| / |u_analitica|\n",
-    "        # con norma L_inf\n",
-    "        #error = np.abs(u_e.x.array - u_sol.x.array).max()/np.abs(u_e.x.array).max()\n",
+    "    solver.solveStep(bc_u, bc_p)\n",
+    "    error_abs_integral = fem.form(inner(u_e - solver.u_sol, u_e - solver.u_sol) * dx)\n",
+    "    error_abs = np.sqrt(solver.domain.comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
+    "    norm_u_e_integral = fem.form(inner(u_e, u_e) * dx)\n",
+    "    norm_u_e = np.sqrt(solver.domain.comm.allreduce(assemble_scalar(norm_u_e_integral), op=MPI.SUM))\n",
+    "    error = error_abs / norm_u_e\n",
     "\n",
-    "        # con norma L_2\n",
-    "        error_abs_integral = fem.form(inner(u_e - u_sol, u_e - u_sol) * dx)\n",
-    "        error_abs = np.sqrt(comm.allreduce(assemble_scalar(error_abs_integral), op=MPI.SUM))\n",
-    "        norm_u_e_integral = fem.form(inner(u_e, u_e) * dx)\n",
-    "        norm_u_e = np.sqrt(comm.allreduce(assemble_scalar(norm_u_e_integral), op=MPI.SUM))\n",
-    "        error = error_abs / norm_u_e\n",
-    "        \n",
+    "    t += dt\n",
+    "    if error_log:\n",
     "        error_log.write('t = %.2f: error = %.3g' % (t, error) + \"\\n\")\n",
+    "    \n",
+    "    u_file.write(t)\n",
+    "    p_file.write(t)\n",
     "\n",
     "u_file.close()\n",
-    "p_file.close()"
+    "p_file.close()\n",
+    "if error_log:\n",
+    "    error_log.close()\n",
+    "if progress:\n",
+    "    progress.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d201b489-9c52-462e-881d-0fb4c492bde5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
