fix directory name to save sol

--- a/lid_driven2D/ipcs.ipynb
+++ b/lid_driven2D/ipcs.ipynb
@@ -33,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "solver_name = \"solver2\"\n",
     "T = 10 \n",
     "dt = 1/100\n",
     "num_steps = int(T/dt)\n",
@@ -83,8 +84,7 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
-    "from solver1 import SolverIPCS\n",
-    "\n",
+    "SolverIPCS = getattr(import_module(f\"solvers.{solver_name}\"), \"SolverIPCS\")\n",
     "solver = SolverIPCS(domain, dt, rho, mu, f)"
    ]
   },
@@ -182,10 +182,10 @@
     "\n",
     "t = 0\n",
     "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps) if domain.comm.rank == 0 else None\n",
-    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
-    "folder = domain.comm.bcast(folder, root=0)\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{re}re{folder}/velocity.bp\", solver.u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{re}re{folder}/pressure.bp\", solver.p_sol)\n",
+    "date = solver_name + datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
+    "date = domain.comm.bcast(folder, root=0)\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{re}re/{solver_name}/{date}/velocity.bp\", solver.u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{re}re/{solver_name}/{date}/pressure.bp\", solver.p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)\n",
     "\n",
