--- a/pipe_with_cylinder/ipcs.ipynb
+++ b/pipe_with_cylinder/ipcs.ipynb
@@ -333,6 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "solver_name = \"solver2\"\n",
     "dt = 1/10 # provisional\n",
     "mu = 0.001 # viscosidad dinamica\n",
     "rho = 1 # densidad\n",
@@ -348,8 +349,9 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "from importlib import import_module\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
-    "from solver1 import SolverIPCS\n",
+    "SolverIPCS = getattr(import_module(f\"solvers.{solver_name}\"), \"SolverIPCS\")\n",
     "\n",
     "solver = SolverIPCS(domain, dt, rho, mu, f)"
    ]
@@ -549,10 +551,10 @@
     "num_steps = int((t_end-t)/dt)\n",
     "\n",
     "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps) if domain.comm.rank == 0 else None\n",
-    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
-    "folder = domain.comm.bcast(folder, root=0)\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{folder}/dt100_3/velocity.bp\", solver.u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{folder}/dt100_3/pressure.bp\", solver.p_sol)\n",
+    "date = solver_name+ datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
+    "date = domain.comm.bcast(folder, root=0)\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{solver_name}/{date}/dt100_3/velocity.bp\", solver.u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{solver_name}/{date}/dt100_3/pressure.bp\", solver.p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)"
    ]
@@ -626,10 +628,8 @@
     "num_steps = int((t_end-t)/dt)\n",
     "\n",
     "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps) if domain.comm.rank == 0 else None\n",
-    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
-    "folder = domain.comm.bcast(folder, root=0)\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{folder}/dt400_25/velocity.bp\", solver.u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{folder}/dt400_25/pressure.bp\", solver.p_sol)\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{solver_name}/{date}/dt400_25/velocity.bp\", solver.u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{solver_name}/{date}/dt400_25/pressure.bp\", solver.p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)"
    ]
