--- a/unit_square/ipcs.ipynb
+++ b/unit_square/ipcs.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "solver_name = \"solver2\"\n",
     "T = 5\n",
     "num_steps = 1000\n",
     "n_cells = 32\n",
@@ -49,8 +50,9 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "from importlib import import_module\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
-    "from solver1 import SolverIPCS\n",
+    "SolverIPCS = getattr(import_module(f\"solvers.{solver_name}\"), \"SolverIPCS\")\n",
     "\n",
     "def initial_velocity(x):\n",
     "    values = np.zeros((domain.geometry.dim, x.shape[1]), dtype=PETSc.ScalarType)\n",
@@ -156,10 +158,10 @@
     "t = 0\n",
     "progress = tqdm(desc=\"Resolviendo navier-stokes\", total=num_steps) if domain.comm.rank == 0 else None\n",
     "error_log = open(f\"{folder}/error.txt\", \"w\") if domain.comm.rank == 0 else None\n",
-    "folder = datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
-    "folder = domain.comm.bcast(folder, root=0)\n",
-    "u_file = io.VTXWriter(domain.comm, f\"{folder}/velocity.bp\", solver.u_sol)\n",
-    "p_file = io.VTXWriter(domain.comm, f\"{folder}/pressure.bp\", solver.p_sol)\n",
+    "date = solver_name + datetime.now(tz=timezone(-timedelta(hours=5))).isoformat(timespec='seconds') if domain.comm.rank == 0 else None\n",
+    "date = domain.comm.bcast(folder, root=0)\n",
+    "u_file = io.VTXWriter(domain.comm, f\"{solver_name}/{date}/velocity.bp\", solver.u_sol)\n",
+    "p_file = io.VTXWriter(domain.comm, f\"{solver_name}/{date}/pressure.bp\", solver.p_sol)\n",
     "u_file.write(t)\n",
     "p_file.write(t)\n",
     "\n",
